changes to intro

--- a/paper.bib
+++ b/paper.bib
@@ -9,6 +9,23 @@
 
 
 
+@ARTICLE{2012MNRAS.421L.112B,
+   author = {{Basu}, K.},
+    title = "{A Sunyaev-Zel'dovich take on cluster radio haloes - I. Global scaling and bi-modality using Planck data}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1111.2856},
+ primaryClass = "astro-ph.CO",
+ keywords = {radiation mechanisms: non-thermal, radiation mechanisms: thermal, galaxies: clusters: intracluster medium, radio continuum: general},
+     year = 2012,
+    month = mar,
+   volume = 421,
+    pages = {L112-L116},
+      doi = {10.1111/j.1745-3933.2012.01217.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.421L.112B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{farmer04,
 	Abstract = {Cosmic rays scatter off magnetic irregularities (Alfv&#233;n waves) with which they are resonant, that is, waves of wavelength comparable to their gyroradii. These waves may be generated either by the cosmic rays themselves, if they stream faster than the Alfv&#233;n speed, or by sources of MHD turbulence. Waves excited by streaming cosmic rays are ideally shaped for scattering, whereas the scattering efficiency of MHD turbulence is severely diminished by its anisotropy. We show that MHD turbulence has an indirect effect on cosmic-ray propagation by acting as a damping mechanism for cosmic-ray-generated waves. The hot (``coronal'') phase of the interstellar medium is the best candidate location for cosmic-ray confinement by scattering from self-generated waves. We relate the streaming velocity of cosmic rays to the rate of turbulent dissipation in this medium for the case in which turbulent damping is the dominant damping mechanism. We conclude that cosmic rays with up to 10<SUP>2</SUP> GeV could not stream much faster than the Alfv&#233;n speed but 10<SUP>6</SUP> GeV cosmic rays would stream unimpeded by self-generated waves, unless the coronal gas were remarkably turbulence-free. },
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
